--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.13.0",
+    "@vercel/analytics": "^1.2.2",
+    "bootstrap-icons": "^1.11.3",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18"
