--- a/package.json
+++ b/package.json
@@ -1,26 +1,26 @@
 {
-  "name": "bofar",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@prisma/client": "^5.13.0",
-    "@vercel/analytics": "^1.2.2",
-    "bootstrap-icons": "^1.11.3",
-    "next": "14.2.3",
-    "react": "^18",
-    "react-dom": "^18"
-  },
-  "devDependencies": {
-    "eslint": "^8",
-    "eslint-config-next": "14.2.3",
-    "postcss": "^8",
-    "prisma": "^5.13.0",
-    "tailwindcss": "^3.4.1"
-  }
+    "name": "bofar",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "prisma generate && next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@prisma/client": "^5.13.0",
+        "@vercel/analytics": "^1.2.2",
+        "bootstrap-icons": "^1.11.3",
+        "next": "14.2.3",
+        "react": "^18",
+        "react-dom": "^18"
+    },
+    "devDependencies": {
+        "eslint": "^8",
+        "eslint-config-next": "14.2.3",
+        "postcss": "^8",
+        "prisma": "^5.13.0",
+        "tailwindcss": "^3.4.1"
+    }
 }
