--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
         "bootstrap-icons": "^1.11.3",
         "next": "14.2.3",
         "react": "^18",
-        "react-dom": "^18"
+        "react-dom": "^18",
+        "snake-case": "^4.0.0"
     },
     "devDependencies": {
         "eslint": "^8",
