--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "dependencies": {
         "@prisma/client": "^5.13.0",
         "@vercel/analytics": "^1.2.2",
+        "bcrypt": "^5.1.1",
         "bootstrap-icons": "^1.11.3",
         "next": "14.2.3",
+        "next-auth": "^4.24.7",
         "react": "^18",
         "react-dom": "^18",
         "snake-case": "^4.0.0"
