--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "next-auth": "^4.24.7",
         "react": "^18",
         "react-dom": "^18",
+        "react-modal": "^3.16.1",
         "snake-case": "^4.0.0"
     },
     "devDependencies": {
